# COMP4901V-Project

./: .gitignore  .rosinstall  README.md  custom.data  frames.gv  gesture.data  run.sh  test_mesh.world
docker/: Dockerfile  build_cadrl_ros_docker.sh  cadrl_ros_docker_entrypoint.sh  run_cadrl_ros_docker.sh
docker/arena_rosnav/: Dockerfile  run_arena_rosnav.sh
gazebo_plugin/: CMakeLists.txt  move_obj.cc
log/: latest_build
src/cadrl_ros/: CMakeLists.txt  package.xml  setup.py
src/cadrl_ros/launch/: cadrl_ros.launch
src/cadrl_ros/scripts/: cadrl_ros_node.py  msg_transform_node.py
src/dynamic_obstacle_sim/: CMakeLists.txt  package.xml
src/dynamic_obstacle_sim/src/: DynamicObstacleGenNode.cpp  DynamicObstacleGenNodeSimple.cpp  DynamicObstaclePlugin.cpp
src/hkust_rgd_behavior/: CMakeLists.txt  package.xml
src/hkust_rgd_behavior/launch/: behavior.launch
src/hkust_rgd_behavior/src/: Actions.cpp  BehaviorNode.cpp  Locations.cpp  RgdControlNode.cpp  Targets.cpp
src/hkust_rgd_bringup/: CMakeLists.txt  package.xml
src/hkust_rgd_bringup/launch/: baseline_nav.launch  dynamic_obstacle_sim.launch  dynamic_obstacle_sim_ros_nav_stack.launch  lidar_slam_nav_bringup.launch  octomap_build.launch  octomap_build_comp4901v.launch  octomap_load.launch  onebot_bringup.launch  onebot_build_map.launch  onebot_dynamic.launch  only_robot.launch  spawn_robot.launch  (+1 more)
src/hkust_rgd_camera/: CMakeLists.txt  package.xml  setup.py
src/hkust_rgd_gesture_recog/: CMakeLists.txt  config.cfg  custom.data  package.xml  setup.py
src/hkust_rgd_localization/: CMakeLists.txt  package.xml
src/hkust_rgd_mapping/: CMakeLists.txt  package.xml
src/hkust_rgd_msgs/: CMakeLists.txt  package.xml
src/hkust_rgd_msgs/msg/dynamic_obstacles/: dynamic_obstacles.msg
src/hkust_rgd_msgs/msg/rgd_cmd/: rgd_command.msg
src/hkust_rgd_msgs/msg/rgd_voice_out/: voice_cast.msg
src/hkust_rgd_navigation/: CMakeLists.txt  package.xml
src/robot_message/: CMakeLists.txt  package.xml
(+48 files in other folders)
